<resources>
    <string name="app_name">Facebook App</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="d_name">Display Name</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="upload">Upload</string>
    <string name="login">Login to Facebook</string>
    <string name="login_btn">Login</string>
    <string name="incorrect_info">Incorrect username or password</string>
    <string name="unauthorized_access_to_feed">UNAUTHORIZED ACCESS TO FEED!</string>


</resources>