<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="28sp"
                android:color="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/editTextUsername"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:background="@drawable/edit_box"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:background="@drawable/edit_box"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_password"
                android:inputType="textPassword"
                android:id="@+id/editTextConfirmPassword"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:background="@drawable/edit_box"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/d_name"
                android:id="@+id/editTextDisplayName"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:background="@drawable/edit_box"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_pic"
                android:id="@+id/buttonUploadImage"
                android:layout_marginBottom="24dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="16dp">


                <View
                    android:id="@+id/backgroundView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cool_button" />


                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="10dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="8dp"
                    android:gravity="center"
                    android:transitionName="@drawable/cool_button"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
