<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:color="@color/gray"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_box"
                android:hint="@string/username"
                android:padding="8dp" />

            <TextView
                android:id="@+id/errorUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/red"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_box"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <TextView
                android:id="@+id/errorPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/red"
                android:visibility="gone" />


            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_box"
                android:hint="@string/c_password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <TextView
                android:id="@+id/errorConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/red"
                android:visibility="gone" />


            <EditText
                android:id="@+id/editTextDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_box"
                android:hint="@string/d_name"
                android:padding="8dp" />

            <TextView
                android:id="@+id/errorDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/red"
                android:visibility="gone" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">


                <TextView
                    android:id="@+id/textViewProfilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile_pic" />

                <ImageView
                    android:id="@+id/pfpPreview"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/textViewProfilePicture"/>

                <Button
                    android:id="@+id/buttonUploadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@id/pfpPreview"
                    android:backgroundTint="@color/blue"
                    android:text="@string/upload" />
            </RelativeLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="16dp">


                <View
                    android:id="@+id/backgroundView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cool_button" />


                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:transitionName="@drawable/cool_button" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
